# token_world

./: .env.example  .flake8  .gitignore  404.html  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  acknowledgments.html  index.html  license.html  mkdocs.yml  pyproject.toml  search.html  setup.py
.github/: rename_project.sh
.github/workflows/: main.yml
about/: introduction.html  vision.html
advanced/: agent_evolution.html  integrating_models.html  scalability.html
contributing/: coding_standards.html  how_to_contribute.html  reporting_issues.html
docs/: acknowledgments.md  index.md
docs/about/: introduction.md  vision.md
docs/advanced/: agent_evolution.md  integrating_models.md  scalability.md
docs/contributing/: how_to_contribute.md  reporting_issues.md
docs/features/: index.md  partial_observability.md
docs/getting_started/: installation.md  quick_start.md
features/: dynamic_mechanics.html  grounding.html  index.html  partial_observability.html
getting_started/: installation.html  quick_start.html
search/: search_index.json
technical/: action_validation.html  architecture.html  environment.html  sub_agents.html
tests/: test_agentic.py  test_base.py  test_entity.py  test_form_filling.py  test_message_db.py  test_message_tree.py  test_person.py  test_physical.py  test_printing.py  test_world.py
token_talkers/: __main__.py  base.py  cli.py
token_world/: __main__.py  base.py  cli.py  entity.py  environment.py  person.py  person_world.py  world.py
usage/: customization.html  debugging_tool.html
(+40 files in other folders)
